[metadata]
name = DcWebhook
version = 0.0.3
author  = cookie0_o
author_email = therealcookie@waifu.club
url = https://github.com/cookie0o
description = Simple Discord Webhook wrapper for Python.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    
[options]
packages = find:
Python_requires = >=3.7
include_package_data = True

[project.urls]
Source code = https://github.com/cookie0o/DcWebhook
Report issue = https://github.com/cookie0o/DcWebhook/issues